--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+      "experimentalDecorators":true,
+      "noImplicitThis":true,
+      "strictNullChecks":false,
+      "baseUrl":"src",
+      
   },
   "include": [
-    "src"
+    "src/**/*",
+      "stories/**/*"
   ]
 }
