--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-react-lite": "^3.2.0",
     "mobx-state-tree": "^5.0.1",
     "node-sass": "^5.0.0",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -68,7 +69,6 @@
     "@storybook/addon-links": "^6.2.0",
     "@storybook/node-logger": "^6.2.0",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.2.0",
     "css-loader": "^5.2.0",
     "sass": "^1.32.8",
