--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -23,6 +24,7 @@
       "noImplicitThis":true,
       "strictNullChecks":false,
       "baseUrl":"src",
+      "noImplicitAny":false
       
   },
   "include": [
